Commit final step of bread and butter

--- a/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
+++ b/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
@@ -4054,6 +4054,159 @@
     "pivotdf=orderjoineddf.groupBy(\"state\",\"city\").pivot(\"category\").agg(sum(\"amt\").alias(\"sumamt\"),avg(\"amt\").alias(\"avgamt\")).orderBy(\"state\")\n",
     "display(pivotdf)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "37115047-bfa4-4c20-97fd-1b470749350d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#####6.Set operations\n",
+    "Operations performed on the dataset to combine/compare it vertically(columnar expansion(increased/decreased number of rows))."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e8e8e18d-b3ec-4538-843e-f971765a360f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "cleandf1=rawdf1.where(\"ID not in ('ten','trailer_data:end of file')\")\n",
+    "df1=cleandf1.where(\"ID between 4000100 and 4000110\")\n",
+    "df2=cleandf1.where(\"ID between 4000105 and 4000115\")\n",
+    "df1.show()\n",
+    "df2.show()\n",
+    "\n",
+    "#set operations\n",
+    "#Thumb rules to perform set operations:\n",
+    "#1. Column numbers should be same\n",
+    "#2. Column order should be same\n",
+    "#3. Column datatype should be same\n",
+    "\n",
+    "#union (returns union of multiple dfs with duplicates)\n",
+    "uniondf=df1.union(df2)#returns duplicates\n",
+    "print(\"union without dis\",uniondf.count())\n",
+    "\n",
+    "\n",
+    "#unionall (alias of union/same as union)\n",
+    "unionalldf=df1.unionAll(df2)\n",
+    "print(\"union All\",uniondf.count())\n",
+    "unionalldf.show(100)\n",
+    "\n",
+    "uniondf=df1.union(df2).distinct()#returns distinct result\n",
+    "print(\"union with dis\",uniondf.count())\n",
+    "uniondf.show(100)\n",
+    "\n",
+    "#unionByName\n",
+    "df2=df2.select(\"ID\",\"FName\",\"LName\",\"Age\",\"profession\",lit(\"retailsource\").alias(\"sourcesystem\"))\n",
+    "unionbyname=df1.unionByName(df2,allowMissingColumns=True)\n",
+    "unionbyname.show(100)\n",
+    "\n",
+    "#intersect (returns common data between both df excluding duplicates)\n",
+    "df2=cleandf1.where(\"ID between 4000105 and 4000115\")\n",
+    "intersectdf=df1.intersect(df2)\n",
+    "print(\"intersection\",intersectdf.count())\n",
+    "intersectdf.show(100)\n",
+    "\n",
+    "#intersectall (returns common data between both df including duplicates)\n",
+    "df2=cleandf1.where(\"ID between 4000105 and 4000115\")\n",
+    "intersectdf=df1.intersectAll(df2)\n",
+    "print(\"intersection\",intersectdf.count())\n",
+    "intersectdf.show(100)\n",
+    "\n",
+    "#subtract (returns df1 - df2)\n",
+    "df2=cleandf1.where(\"ID between 4000105 and 4000115\")\n",
+    "subtractdf=df1.subtract(df2)\n",
+    "print(\"df1 subtraction df2\",subtractdf.count())\n",
+    "subtractdf.show(100)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "f6720952-107b-4ead-99ab-f406ef93d309",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "##6. Data Persistance (LOAD)-> Data Publishing & Consumption<br>\n",
+    "Enablement of the Cleansed, transformed and analysed data as a Data Product.<br>\n",
+    "Consumer Data Product\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8f5d284e-b696-41db-92c6-901bae055a7e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "#Storing munged DF into the target/consumption layer\n",
+    "#As a performance optimization, i will remove all display/show/count/take/limit/collect/len functions (actions), which are used for development purpose\n",
+    "standarddf6.write.csv(\"/Volumes/telecom_catalog_assign/landing_zone/landing_vol/BreadButter/munged\",mode='overwrite')\n",
+    "df7.write.json(\"/Volumes/telecom_catalog_assign/landing_zone/landing_vol/BreadButter/enriched\",mode='overwrite')\n",
+    "\n",
+    "df7.write.saveAsTable(\"cust_purchase_analytics\",mode='overwrite')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "87c070fe-a65c-470b-a5c6-f110b39e1a6f",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT * FROM cust_purchase_analytics"
+   ]
   }
  ],
  "metadata": {
@@ -4067,6 +4220,12 @@
    "inputWidgetPreferences": null,
    "language": "python",
    "notebookMetadata": {
+    "mostRecentlyExecutedCommandWithImplicitDF": {
+     "commandId": 4580642125791337,
+     "dataframes": [
+      "_sqldf"
+     ]
+    },
     "pythonIndentUnit": 4
    },
    "notebookName": "BB_End_End_Transformations",
