--- a/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
+++ b/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
@@ -2632,7 +2632,8 @@
     }
    },
    "source": [
-    "##4. Data Curation/Processing (Pre Wrangling Stage) - Applying different levels of<br> business logics, transformation, filtering, grouping, aggregation and limits applying<br> different transformation functions\n",
+    "##4. Data Curation/Processing (Pre Wrangling Stage) - <br>\n",
+    "Applying different levels of<br> business logics, transformation, filtering, grouping, aggregation and limits applying<br> different transformation functions\n",
     "1. Select, Filter\n",
     "2. Derive flags & Columns\n",
     "3. Format\n",
@@ -3055,6 +3056,50 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "69f145d3-12dd-4dd0-8a13-bace40ac59f8",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "| Operation   | Type                | Runs on Cluster | Returns to Driver | Intended Use                            |\n",
+    "| ----------- | ------------------- | --------------- | ----------------- | --------------------------------------- |\n",
+    "| `limit()`   | Transformation      | Yes             | No                | Restrict rows for downstream processing |\n",
+    "| `take()`    | Action              | Yes             | Yes               | Fetch small sample to driver            |\n",
+    "| `show()`    | Action              | Yes             | Prints only       | Debugging / preview                     |\n",
+    "| `display()` | Action (Databricks) | Yes             | UI only           | Interactive analysis                    |\n",
+    "| `collect()` | Action              | Yes             | **All rows**      | Small datasets only                     |\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "5d22a51c-2e15-40b6-8c8a-07e7ec4b2a21",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "| Method      | Lazy | Action | Data to Driver | Risk Level |\n",
+    "| ----------- | ---- | ------ | -------------- | ---------- |\n",
+    "| `limit()`   | Yes  | No     | No             | Safe       |\n",
+    "| `take()`    | No   | Yes    | Partial        | Medium     |\n",
+    "| `show()`    | No   | Yes    | Minimal        | Low        |\n",
+    "| `display()` | No   | Yes    | Managed        | Low        |\n",
+    "| `collect()` | No   | Yes    | **All**        | **High**   |\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 0,
    "metadata": {
@@ -3395,7 +3440,7 @@
     "txnsenrichdf=txnsmungeddf.withColumn(\"surrogatekey\",monotonically_increasing_id())\n",
     "txnscurateddf=txnsenrichdf.withColumn(\"txndt\",to_date(col(\"txndt\"),\"MM-dd-yyyy\"))\n",
     "txnscurateddf.printSchema()\n",
-    "txnscurateddf.show(5)#Completed munging, enrichment and curation\n",
+    "txnscurateddf.show(5)#Completed munging, enrichment and curationv\n",
     "\n",
     "#Now lets achieve the solution for the business requirement:\n",
     "#Requirement: I need to do analytics/reporting of top 3 customers who did highest amount of transactions in our business last month, so i can send them some offers.\n",
@@ -4059,7 +4104,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "37115047-bfa4-4c20-97fd-1b470749350d",
      "showTitle": false,
@@ -4145,7 +4193,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "f6720952-107b-4ead-99ab-f406ef93d309",
      "showTitle": false,
