--- a/4_logistics_usecase/generic_project/gold_sql/gold_core_curated_5a_sparksql.ipynb
+++ b/4_logistics_usecase/generic_project/gold_sql/gold_core_curated_5a_sparksql.ipynb
@@ -29,7 +29,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "d9feda18-41f9-4d04-82d4-e5ddfdb8627a",
      "showTitle": false,
@@ -214,7 +217,7 @@
    "notebookName": "gold_core_curated_5a_sparksql",
    "widgets": {
     "catalog": {
-     "currentValue": "",
+     "currentValue": "prodcatalog1",
      "nuid": "a4f9b2ea-43d3-4bf8-9b43-1b589e5580e0",
      "typedWidgetInfo": {
       "autoCreated": false,
@@ -240,7 +243,7 @@
      }
     },
     "schema": {
-     "currentValue": "",
+     "currentValue": "logistics1",
      "nuid": "b2239e0f-3356-45a7-a702-ac3e1c75bd96",
      "typedWidgetInfo": {
       "autoCreated": false,
