--- a/4_logistics_usecase/generic_project/gold_sql/gold_analytics_advanced5b_sparksql.ipynb
+++ b/4_logistics_usecase/generic_project/gold_sql/gold_analytics_advanced5b_sparksql.ipynb
@@ -5,7 +5,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e82ade5f-389e-4d04-8a24-8541ce3412c7",
      "showTitle": false,
@@ -26,7 +29,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "44bac67e-1bc0-4167-b0fc-3690c866f9be",
      "showTitle": false,
@@ -40,7 +46,7 @@
     "import json\n",
     "\n",
     "config_nb_output = dbutils.notebook.run(\n",
-    "    \"/Workspace/Users/infoblisstech@gmail.com/databricks-code-repo/4_logistics_usecase/generic_project/general_conf_utils_1_2/configs_path1\",\n",
+    "    \"/Workspace/Users/sunilasha625@gmail.com/DataBricksCodeRepo/4_logistics_usecase/generic_project/general_conf_utils_1_2/configs_path1\",\n",
     "    120,{\"catalog\": CATALOG,\"schema\": SCHEMA})\n",
     "\n",
     "config_dict = json.loads(config_nb_output)\n",
@@ -73,7 +79,7 @@
    },
    "outputs": [],
    "source": [
-    "%run /Workspace/Users/infoblisstech@gmail.com/databricks-code-repo/4_logistics_usecase/generic_project/general_conf_utils_1_2/util_functions2"
+    "%run /Workspace/Users/sunilasha625@gmail.com/DataBricksCodeRepo/4_logistics_usecase/generic_project/general_conf_utils_1_2/util_functions2"
    ]
   },
   {
@@ -193,7 +199,60 @@
     "pythonIndentUnit": 4
    },
    "notebookName": "gold_analytics_advanced5b_sparksql",
-   "widgets": {}
+   "widgets": {
+    "catalog": {
+     "currentValue": "prodcatalog1",
+     "nuid": "3b164eed-fb67-41ac-90a3-95fea7f9890f",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": null,
+      "name": "catalog",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "catalog",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    },
+    "schema": {
+     "currentValue": "logistics1",
+     "nuid": "43c45a46-4dd5-416b-a1e2-ded3ac8c60c9",
+     "typedWidgetInfo": {
+      "autoCreated": false,
+      "defaultValue": "",
+      "label": null,
+      "name": "schema",
+      "options": {
+       "widgetDisplayType": "Text",
+       "validationRegex": null
+      },
+      "parameterDataType": "String"
+     },
+     "widgetInfo": {
+      "widgetType": "text",
+      "defaultValue": "",
+      "label": null,
+      "name": "schema",
+      "options": {
+       "widgetType": "text",
+       "autoCreated": null,
+       "validationRegex": null
+      }
+     }
+    }
+   }
   },
   "language_info": {
    "name": "python"
