--- a/data_bricks_use_case_workout/delta_lake_lakehouse_operations_1.ipynb
+++ b/data_bricks_use_case_workout/delta_lake_lakehouse_operations_1.ipynb
@@ -104,6 +104,30 @@
     "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "2e0aef67-10e5-4600-a2de-48589d0e38ae",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "drop table lakehousecat.deltadb.drugstb1;\n",
+    "drop table lakehousecat.deltadb.drugstbl_merge;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
       "rowLimit": 10000
      },
      "inputWidgets": {},
@@ -1026,7 +1050,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "3bab2ec7-13a1-43f3-bf7f-525b4af01583",
      "showTitle": false,
@@ -1042,7 +1069,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "7124c698-face-4d0d-94f1-3571bdb46293",
      "showTitle": false,
@@ -1082,7 +1112,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "97d594af-24dd-4737-a61b-fe715a2a8ba2",
      "showTitle": false,
@@ -1114,14 +1147,17 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "SELECT count(*) from drugstbl_merge VERSION AS OF 5"
+    "SELECT count(*) from drugstbl_merge VERSION AS OF 3"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1a4becc2-cc5a-40a7-97c1-3ef1dc7e7052",
      "showTitle": false,
@@ -1154,14 +1190,17 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "select count(1) from drugstbl_merge timestamp as of '2026-01-27T15:34:45.000+00:00'"
+    "select count(1) from drugstbl_merge timestamp as of '2026-01-30T16:10:40.000+00:00'"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "1d2db655-59f1-4d2b-95f3-0ba1357dfe06",
      "showTitle": false,
@@ -1178,7 +1217,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "6d89f636-ee13-487b-9be8-1505acb2a974",
      "showTitle": false,
@@ -1196,7 +1238,10 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "229ee2cb-869a-4fa0-a7d4-9d169d7e9e86",
      "showTitle": false,
@@ -1283,7 +1328,7 @@
    "outputs": [],
    "source": [
     "%sql\n",
-    "SELECT count(1) FROM drugstbl_merge TIMESTAMP AS OF '2026-01-28T17:08:59.000+00:00';"
+    "SELECT count(1) FROM drugstbl_merge TIMESTAMP AS OF '2026-01-30T16:10:37.000+00:00';"
    ]
   },
   {
@@ -1334,7 +1379,10 @@
    "cell_type": "markdown",
    "metadata": {
     "application/vnd.databricks.v1+cell": {
-     "cellMetadata": {},
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "rowLimit": 10000
+     },
      "inputWidgets": {},
      "nuid": "e24edcfb-2e40-4690-9bc8-312399a67a09",
      "showTitle": false,
@@ -1549,7 +1597,10 @@
     "--Atomicity (Individual transaction that doesn't affect the other)\n",
     "UPDATE acid_demo_txn SET amount = amount + 100 WHERE id = 1;--individual/atomic\n",
     "UPDATE acid_demo_txn SET amount = amount + 200 WHERE id = 1;--individual/atomic\n",
-    "describe history acid_demo_txn;"
+    "describe history acid_demo_txn;\n",
+    "\n",
+    "--START TRANSACTION; UPDATE acid_demo_txn SET amount = amount + 100 WHERE id = 1; commit;\n",
+    "--START TRANSACTION; UPDATE acid_demo_txn SET amount = amount + 200 WHERE id = 1; commit;"
    ]
   },
   {
@@ -1601,7 +1652,8 @@
     "ALTER TABLE acid_demo_txn\n",
     "ADD CONSTRAINT positive_amount CHECK (amount > 0);\n",
     "INSERT INTO acid_demo_txn VALUES (4, 100);--Atomicity and consistancy\n",
-    "--INSERT INTO acid_demo_txn VALUES (5, -100);--Atomicity and consistancy"
+    "--INSERT INTO acid_demo_txn VALUES (5, -100);--Atomicity and consistancy\n",
+    "\n"
    ]
   },
   {
@@ -1650,6 +1702,359 @@
     "%sql\n",
     "select * from acid_demo_txn;"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "f35b02cb-c389-4bd2-920a-c2fcc32cf9ca",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "--Isolation (We can achieve using timetravel (restore operation (no rollback)))\n",
+    "--START TRANSACTION; SAVEPOINT before_delete; DELETE FROM employees WHERE employee_id = 129; ROLLBACK TO before_delete;\n",
+    "--Notebook1 (We can see the data in notebook1)\n",
+    "--BEGIN TRANSACTION;\n",
+    "UPDATE acid_demo_txn SET amount = 999 WHERE id = 2;--Serialized (Committed read)\n",
+    "--Notebook2 (We can see the data in notebook2 )\n",
+    "--Notebook2 (We can see the data in notebook2 )\n",
+    "use lakehousecat.deltadb;\n",
+    "select * from (select * from acid_demo_txn version as of 14) where id=2;--serializable read (after the data successfully committed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d7501880-a6be-43c7-8234-6ddf14de7009",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "DESC HISTORY acid_demo_txn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "a00637b2-1f6e-45ce-b5a7-62aab8e50e39",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "UPDATE acid_demo_txn\n",
+    "SET amount=1000\n",
+    "WHERE id=1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e2d2d514-63f2-44d5-8e31-ad1b95e78fb5",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "DESC HISTORY acid_demo_txn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9b60a8a7-2833-4e8c-9798-aa62749a45cc",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT * FROM acid_demo_txn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "01c33cb7-c0ea-4149-8778-d50e32e0576e",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "--something like savepoint+rollback (but not really a rollback (TCL is not available in Databricks in the name of commit, rollback, savepoint))\n",
+    "restore table acid_demo_txn to version as of 41"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "d1b735b4-537e-4568-b506-9bdc73569618",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "SELECT * FROM acid_demo_txn VERSION AS OF 39;"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "fefb719d-0081-428f-a3e9-96819781031d",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "source": [
+    "#####e. Transactions Control using restore\n",
+    "Bigdata ecosystems such as spark/databricks/delta are not Transaction in nature, hence it will not support TCL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "88c29d07-4b58-478c-b888-efe389bde8ea",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "--select count(1) from deltadb.drugs where date>'2012-02-28';\n",
+    "--4329\n",
+    "delete from drugstb1 where date>'2012-02-28';\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "e81d918c-7fa8-4940-a28a-ae21a8e5b7fb",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql \n",
+    "select count(1) from drugstb1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "aa6e09fc-85f5-40a0-a5b8-2b04546894e3",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "describe history drugstb1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1f4ec820-95aa-4651-920b-c24440419a4c",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "RESTORE TABLE drugstb1 TO VERSION AS OF 2;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "1dcdcc16-cd82-496c-bb25-81c7512d2ca2",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "select count(1) from drugstb1;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "8d002b74-36ff-47de-927c-55bcd2ad78df",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "--We can restore to any older/later version (unlit 168 hours/vacumm period)\n",
+    "RESTORE TABLE drugstb1 TO VERSION AS OF 4;"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {
+      "byteLimit": 2048000,
+      "implicitDf": true,
+      "rowLimit": 10000
+     },
+     "inputWidgets": {},
+     "nuid": "9d62d4a3-9e0a-4e75-b0c9-fff055e4304b",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "%sql\n",
+    "select count(1) from drugstb1;"
+   ]
   }
  ],
  "metadata": {
@@ -1664,7 +2069,7 @@
    "language": "python",
    "notebookMetadata": {
     "mostRecentlyExecutedCommandWithImplicitDF": {
-     "commandId": 5040622494771654,
+     "commandId": 8822670251345948,
      "dataframes": [
       "_sqldf"
      ]
