Lakeflow ingestions pipeline

--- a/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
+++ b/Bread_n_Butter_Transformation_Analytical_Operations/BB_End_End_Transformations.ipynb
@@ -61,9 +61,9 @@
     "Data munging is the process of converting raw, messy data into a clean, structured, and usable format.  \n",
     "It prepares data so that it can be safely used for downstream activities such as data transformation, enrichment, analytics, reporting, and data science or AI applications.<br>\n",
     "When data is first collected (from files, databases, APIs, logs, etc.), it is usually:\n",
-    "- Inconsistent\n",
-    "- Incomplete\n",
-    "- Incorrect\n",
+    "- Inconsistent: USA,US,UNITED AMERICA\n",
+    "- Incomplete: sunil@gamil.com,NULL\n",
+    "- Incorrect:- INDIA,INIDA\n",
     "- Hard to analyze directly\n",
     "- Data munging fixes this\n",
     "\n",
@@ -779,7 +779,8 @@
     "#When you go for Schema Merging/Melting and Schema Evolution?\n",
     "#Schema Merging/Melting (unionByName,allowMissingColumns)- If we get multiple files\n",
     "#Schema Evolution (orc/parquet with mergeSchema) - If no. of columns are keeps added by the source system\n",
-    "#when we know structure of the file already - schema merge/ schema not known earlier  - schema evolution"
+    "#when we know structure of the file already - schema merge/ schema not known earlier  - schema evolution\n",
+    "#df = spark.read.format(\"delta\").option(\"mergeSchema\", \"true\").load(\"/tmp/users\")"
    ]
   },
   {
@@ -3605,9 +3606,9 @@
     "######3.Schema Modeling (Denormalization-joined result of tables)-DWH/DataMart<br>\n",
     "Use inner(mostly),left/right/full(we can use depends on the business)\n",
     "We can build Datawarehouse components (dimension, fact tables) appling joins on the tables to achieve different types of schemas\n",
-    "1. Star Schema\n",
-    "txns_fact cust_mast_dim(dim)    \n",
-    "id,amt    cid,name,age,city_lived \n",
+    "1. Star Schema<br>\n",
+    "txns_fact cust_mast_dim(dim)<br>    \n",
+    "id,amt    cid,name,age,city_lived<br>\n",
     "1,100     11,irfan,44,Bangalore|Chennai<br>\n",
     "\n",
     "Here:<br>\n",
@@ -3618,9 +3619,9 @@
     "\n",
     "\n",
     "2. Snowflake Schema - <br>\n",
-    "txns_fact cust_mast_dim(dim)    cust_det_dim(subdim)\n",
-    "id,amt    cid,name,age          cid,city_lived\n",
-    "1,100     11,irfan,44           11,Bangalore\n",
+    "txns_fact cust_mast_dim(dim)    cust_det_dim(subdim)<br>\n",
+    "id,amt    cid,name,age          cid,city_lived<br>\n",
+    "1,100     11,irfan,44           11,Bangalore<br>\n",
     "                                11,Chennai<br>\n",
     "\n",
     "What changed?<br>\n",
